# viking-renderer

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  GenerateSolution_vs2022.bat  LICENSE
content/shaders/: simpleforwardtestPS.hlsl  simpleforwardtestVS.hlsl
samples/: CMakeLists.txt
samples/raytracer/: CMakeLists.txt  raytracer_sample.cpp
src/: CMakeLists.txt
src/application/: application.cpp  application.h
src/core/: commandline.cpp  commandline.h  common.h  time.cpp  time.h  timer.cpp  timer.h  types.cpp  types.h
src/graphics/: camera.cpp  camera.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  modelloader.h  modelloader_gltf.cpp  modelloader_gltf.h  modelobject.cpp  modelobject.h  postfx.cpp  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h  shader.cpp  shader.h  view.cpp  view.h  viewrenderdata.cpp  viewrenderdata.h  viewrenderer.cpp  viewrenderer.h
src/render/: buffer.cpp  buffer.h  commandlist.cpp  commandlist.h  commandqueue.cpp  commandqueue.h  context.cpp  context.h  d3d12header.h  d3dconvert.cpp  d3dconvert.h  descriptorheap.cpp  descriptorheap.h  device.cpp  device.h  deviceobject.h  event.cpp  event.h  fence.cpp  fence.h  pipelinestate.cpp  pipelinestate.h  rendercommon.h  renderenums.cpp  renderenums.h  renderstates.cpp  renderstates.h  resource.cpp  resource.h  resourcedescriptor.cpp  resourcedescriptor.h  rootsignature.cpp  rootsignature.h  shader.cpp  shader.h  shadercompiler.cpp  shadercompiler.h  swapchain.cpp  swapchain.h  texture.cpp  (+10 more)
src/utils/: commandline.h  hash.h  meshutils.cpp  meshutils.h  str.cpp  str.h  time.h  timer.cpp  timer.h  types.cpp  types.h
