cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE TYPE INTERNAL FORCE)

project("VikingRenderer")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(VKR_SRC_DIR "${PROJECT_SOURCE_DIR}/src")
add_subdirectory(src)

set(VKR_SAMPLES_DIR "${PROJECT_SOURCE_DIR}/samples")
add_subdirectory(samples)