cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE TYPE INTERNAL FORCE)

project("VikingRenderer")

message(STATUS "Detected Windows SDK version: ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")
if (CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION VERSION_LESS "10.0.26100.0")
    message(FATAL_ERROR "Windows SDK version 10.0.26100.0 or newer is required.")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(VKR_VCPKG_ROOT_DIR "${PROJECT_SOURCE_DIR}/vcpkg")

set(VKR_SRC_DIR "${PROJECT_SOURCE_DIR}/src")
add_subdirectory(src)

set(VKR_SAMPLES_DIR "${PROJECT_SOURCE_DIR}/samples")
add_subdirectory(samples)